[project]
name = "snappl-pokemon-market"
version = "0.1.0"
description = "Pokemon Card Market Analysis with real-time price tracking and community features"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "streamlit-authenticator>=0.4.1",
    "streamlit>=1.42.2",
    "pyyaml>=6.0.2",
    "pytesseract>=0.3.13",
    "opencv-python>=4.11.0.86",
    "requests>=2.32.3",
    "python-dateutil>=2.9.0.post0"
]